namespaces/live.cloud-platform.service.justice.gov.uk/mip-hmcts-dynatrace-to-xsiam-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "mip-hmcts-dynatrace-to-xsiam-production"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "mip-soc"
    cloud-platform.justice.gov.uk/application: "Send HMCTS Dynatrace logs to XSIAM Production"
    cloud-platform.justice.gov.uk/owner: "Monitoring and Integration Platform (MIP): monitoring-and-integration-platform@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/mip-hmcts-dynatrace-to-xsiam-production.git"
    cloud-platform.justice.gov.uk/team-name: "mip-devops"
    cloud-platform.justice.gov.uk/review-after: ""
